--- a/app/server/package.json
+++ b/app/server/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "env": "^0.0.2",
     "express": "^4.19.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.0",
